# voctrain

./: .gitattributes  CMakeLists.txt  central_widget.cpp  central_widget.hpp  main.cpp  main_window.cpp  main_window.hpp
